# dnd

./: .gitignore  LICENSE  Readme.md  dnd-cards.spec  main.py  pyproject.toml
.github/workflows/: release.yml
SRDs/: DE_SRD_CC_v5.2.1.txt  allgemeine_talente.yaml  epische_gabe_talente.yaml  herkunftstalente.yaml  kampfstiltalente.yaml  regelglossar.yaml  zauberbeschreibungen.yaml
_bmad-output/brainstorming/: brainstorming-session-2026-04-10-2035.md  brainstorming-session-2026-04-11-1200.md  brainstorming-session-2026-04-12-1200.md
_bmad-output/implementation-artifacts/: 1-1-project-scaffold-and-cli-entry-point.md  1-2-error-hierarchy-and-exit-code-infrastructure.md  1-3-card-data-models-and-yaml-schema.md  1-4-card-scanner-and-data-store-discovery.md  1-5-list-subcommand.md  2-1-deck-profile-model-and-basic-loader.md  2-2-jinja2-template-system-and-spell-card-renderer.md  2-3-pdf-composer-layout-engine.md  2-4-generate-subcommand-end-to-end.md  4-3-talent-and-rule-card-type.md  4-4-class-feature-card-type.md  4-5-duplex-pdf-mode.md  5-1-deck-builder-tui.md  5-2-tui-duplex-generation.md  deferred-work.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  epics.md  prd.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
data/spells/: ablenkung.yaml  alarm.yaml  antimagisches-feld.yaml  arkanes-auge.yaml  atherische-gestalten.yaml  (+121 more)
decks/: deck.yaml  example.yaml  feuer.yaml  schurke.yaml  testclasses.yaml  waldlaufer.yaml
docs/: architecture.md  development-guide.md  index.md  project-overview.md  project-scan-report.json  source-tree-analysis.md
scripts/: convert_srd_spells.py  import_srd_data.py
templates/: class-feature-v1.jinja2  rule-v1.jinja2  spell.jinja2  talent-v1.jinja2
tests/: conftest.py  test_cli.py  test_composer.py  test_errors.py  test_loader.py  test_models.py  test_renderer.py  test_scanner.py  test_tui.py
(+1013 files in other folders)
